Mon, Apr 8, 2024, 4:39 PM +08:00

--- a/MARKUP/syntax.css
+++ b/MARKUP/syntax.css
@@ -1,3 +1,19 @@
+.centered
+{
+    text-align: centre;
+}
 
+.large
+{
+    font-size: large;
+}
 
+.medium
+{
+    font-size: medium;
+}
 
+.small
+{
+    font-size: small;
+}
