Tue, Apr 9, 2024, 4:39 PM +08:00

--- a/trivia/styles.css
+++ b/trivia/styles.css
@@ -32,6 +32,10 @@ body {
     transition: color 2s ease-in-out, background-color 0.15s ease-in-out;
 }
 
+.center {
+	text-align: center;
+}
+
 h1 {
     font-family: 'Montserrat', sans-serif;
     font-size: 48px;
