--- a/flask/hello/templates/index.html
+++ b/flask/hello/templates/index.html
@@ -6,7 +6,7 @@
         <title>hello</title>
     </head>
     <body>
-        Hello World
+        Hello {{ name }} <!-- adding a variable name which we will imprint, Jinja -->
     </body>
 
 </html>
