Thu, Apr 11, 2024, 3:02 PM +08:00

--- a/flask/hello/templates/index.html
+++ b/flask/hello/templates/index.html
@@ -6,6 +6,8 @@
         <title>hello</title>
     </head>
     <body>
+        <!-- hello, world       would be a static html you return-->
+
         Hello {{ name }} <!-- adding a variable name which we will imprint, Jinja -->
     </body>
 
