Thu, Apr 11, 2024, 3:03 PM +08:00

--- a/flask/hello/templates/index.html
+++ b/flask/hello/templates/index.html
@@ -8,7 +8,7 @@
     <body>
         <!-- hello, world       would be a static html you return-->
 
-        Hello {{ name }} <!-- adding a variable name which we will imprint, Jinja -->
+        Hello, {{ name }} <!-- adding a variable name which we will imprint, Jinja -->
     </body>
 
 </html>
