--- a/flask/hello/templates/index.html
+++ b/flask/hello/templates/index.html
@@ -8,7 +8,7 @@
     <body>
         <!-- hello, world       would be a static html you return-->
 
-        Hello, {{ placeholder }} <!-- adding a variable name which we will imprint from the app.py, Jinja -->
+        Hello, {{ namevar }} <!-- adding a variable name which we will imprint from the app.py, Jinja -->
     </body>
 
 </html>
