--- a/flask/hello/templates/index.html
+++ b/flask/hello/templates/index.html
@@ -11,7 +11,7 @@
 <!-- example URL adding ?name=David
         Hello, {{ namevar }} adding a variable name which we will imprint from the app.py, Jinja   -->
 
-        <form action="/greet"  method="get"> <!-- action to server on submit -->
+        <form action="/greet"  method="get"> <!-- action to server on submit, create a ROUTE /greet. not a file not a folder. -->
             <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
             <button type="submit">Greet</button>
 
