Thu, Apr 11, 2024, 3:48 PM +08:00

--- a/flask/hello/templates/greet.html
+++ b/flask/hello/templates/greet.html
@@ -6,19 +6,7 @@
         <title>hello</title>
     </head>
     <body>
-        <!-- hello, world       would be a static html you return-->
-
-<!-- example URL adding ?name=David
-        Hello, {{ namevar }} adding a variable name which we will imprint from the app.py, Jinja   -->
-
-        <form action="/greet"  method="get"> <!-- action to server on submit, create a ROUTE /greet. not a file not a folder. -->
-            <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
-            <button type="submit">Greet</button>
-
-        </form>
-
-
-
+        hello, {{ namevar }}
     </body>
 
 </html>
