Thu, Apr 11, 2024, 3:59 PM +08:00

--- a/flask/hello/templates/layout.html
+++ b/flask/hello/templates/layout.html
@@ -6,7 +6,9 @@
         <title>hello</title>
     </head>
     <body>
-        hello, {{ namevar }}
-    </body>
+        <!-- Jinja  {% anyname %}{% endblock %} placeholder to open and close the block of code  -->
+        {% block body %}{% endblock %}
 
+
+    </body>
 </html>
