Thu, Apr 11, 2024, 4:09 PM +08:00

--- a/flask/hello/templates/layout.html
+++ b/flask/hello/templates/layout.html
@@ -6,7 +6,9 @@
         <title>hello</title>
     </head>
     <body>
-        <!-- Jinja  {% anyname %}{% endblock %} placeholder to open and close the block of code  -->
+<!-- block body example, now layyout.hmtl has the main code, and this html file only extends what is in there -->
+
+
         {% block body %}{% endblock %}
 
     </body>
