--- a/flask/hello/templates/index.html
+++ b/flask/hello/templates/index.html
@@ -22,16 +22,26 @@
     </body>
 
 </html>
--->
-<!-- block body example, now layyout.hmtl has the main code, and this html file only extends what is in there -->
 
+
+ block body example, now layyout.hmtl has the main code, and this html file only extends what is in there
 
 {% extends "layout.html" %}
 
 {% block body %}
 
-                                        <!-- GET puts the vars in the URL in key value pairs -->
-    <form action="/greet"  method="post"> <!-- action to server on submit, create a ROUTE /greet. not a file not a folder. -->
+                                             GET puts the vars in the URL in key value pairs
+    <form action="/greet"  method="post">    action to server on submit, create a ROUTE /greet. not a file not a folder.
+        <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
+        <button type="submit">Greet</button>
+    </form>
+
+{% endblock %}
+-->
+
+{% block body %}
+
+    <form action="/"  method="post">    <!-- remove greet route now -->
         <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
         <button type="submit">Greet</button>
     </form>
