Thu, Apr 11, 2024, 9:49 PM +08:00

--- a/flask/hello/templates/index.html
+++ b/flask/hello/templates/index.html
@@ -39,6 +39,8 @@
 {% endblock %}
 -->
 
+{% extends "layout.html" %}
+
 {% block body %}
 
     <form action="/"  method="post">    <!-- remove greet route now -->
