Thu, Apr 11, 2024, 10:05 PM +08:00

--- a/flask/hello/templates/greet.html
+++ b/flask/hello/templates/greet.html
@@ -22,6 +22,6 @@
 
 {% block body %}
 
-    hello, {% if name %}{{ namevar }}{% else %}world{% endif %}
+    hello, {% if namevar %}{{ namevar }}{% else %}world{% endif %} <!-- if namevar not null, then use namevar. else use 'world'-->
 
 {% endblock %}
