--- a/flask/froshims/template/index.html
+++ b/flask/froshims/template/index.html
@@ -5,7 +5,7 @@
     <h1>Register</h1>
     <form action="/register" method="post">
         <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
-        <select name="sport"> <!-- drop down menu -->
+        <select name="sport"> 
             <option>Basketball</option>
             <option>Soccer</option>
             <option>Ultimate Frisbee</option>
