--- a/flask/froshims/templates/index.html
+++ b/flask/froshims/templates/index.html
@@ -5,7 +5,8 @@
     <h1>Register</h1>
     <form action="/register" method="post">
         <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
-        <select name="sport"> 
+        <select name="sport">
+            <option disabled selected value="">Sport</option> <!-- add a placeholder non selectable avlue as 1st entry -->
             <option>Basketball</option>
             <option>Soccer</option>
             <option>Ultimate Frisbee</option>
