--- a/flask/froshims/templates/index.html
+++ b/flask/froshims/templates/index.html
@@ -4,7 +4,7 @@
 
     <h1>Register</h1>
     <form action="/register" method="post">
-        <input autocomplete="off" autofocus name="name" placeholder="Name" type="text">
+        <input autocomplete="off" autofocus name="name" placeholder="Name" required type="text"> <!-- required entry -->
         <select name="sport">
             <option disabled selected value="">Sport</option> <!-- add a placeholder non selectable avlue as 1st entry -->
             <option>Basketball</option>
