--- a/flask/froshims/templates/index.html
+++ b/flask/froshims/templates/index.html
@@ -7,9 +7,9 @@
         <input autocomplete="off" autofocus name="name" placeholder="Name" type="text"> <!-- required entry, add 'required' -->
         <select name="sport">
             <option disabled selected value="">Sport</option> <!-- add a placeholder non selectable avlue as 1st entry -->
-            <option>Basketball</option>
-            <option>Soccer</option>
-            <option>Ultimate Frisbee</option>
+            {% for sport in sports %}
+                <option>{{ sport }}</option>
+            {% endfor %}
         </select>
         <button type="submit">Register</button>
     </form>
