--- a/flask/froshims/templates/index.html
+++ b/flask/froshims/templates/index.html
@@ -8,7 +8,7 @@
         <select name="sport">
             <option disabled selected value="">Sport</option> <!-- add a placeholder non selectable avlue as 1st entry -->
             {% for sport in sports %}
-                <option>{{ sport }}</option>
+                <option value="{{ sport }}">{{ sport }}</option>
             {% endfor %}
         </select>
         <button type="submit">Register</button>
