Fri, Apr 12, 2024, 9:49 PM +08:00

--- a/flask/froshims/templates/registrants.html
+++ b/flask/froshims/templates/registrants.html
@@ -3,12 +3,12 @@
 {% block body %}
     <h1>Registrants</h1>
     <table>
-        <thread>
+        <thead>
             <tr>
                 <th>Name</th>
                 <th>Sport</th>
             </tr>
-        </thread>
+        </thead>
         <tbody>
             {% for name in registrants %}
                 <tr>
