--- a/flask/froshims/templates/registrants.html
+++ b/flask/froshims/templates/registrants.html
@@ -12,8 +12,11 @@
         <tbody>
             {% for name in registrants %}
                 <tr>
-                    <td>{{ name }}</td>
-                    <td>{{ registrants[name] }}</td>
+                    <td>{{ registrant.name }}</td>
+                    <td>{{ registrant.sport }}</td>
+                    <td>
+                        <form action
+                    </td>
                 </tr>
             {% endfor %}
         </tbody>
