--- a/flask/froshims/templates/registrants.html
+++ b/flask/froshims/templates/registrants.html
@@ -15,7 +15,10 @@
                     <td>{{ registrant.name }}</td>
                     <td>{{ registrant.sport }}</td>
                     <td>
-                        <form action
+                        <form action="/deregister" method="post">
+                            <input name="id" type="hidden" value="{{ registrant.id }}">
+                            <button type="submit">Deregister</button>
+                        </form>
                     </td>
                 </tr>
             {% endfor %}
