Fri, Apr 12, 2024, 11:50 PM +08:00

--- a/flask/froshims/templates/registrants.html
+++ b/flask/froshims/templates/registrants.html
@@ -10,7 +10,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for name in registrants %}
+            {% for registrant in registrants %}
                 <tr>
                     <td>{{ registrant.name }}</td>
                     <td>{{ registrant.sport }}</td>
