--- a/flask/login/templates/layout.html
+++ b/flask/login/templates/layout.html
@@ -1,12 +1,14 @@
-<!DOCTYPE = html>
-<head>
+<!DOCTYPE html>
+
+<html lang="en">
+    <head>
+        <meta name="viewport" content="initial-scale=1 width=device-width">
+        <title>Login</title>
+    </head>
     <body>
 
-
+        {% block body %}{% endblock %}
 
 
     </body>
-
-
-
-</head>
+</html>
