--- a/flask/login/templates/index.html
+++ b/flask/login/templates/index.html
@@ -4,10 +4,12 @@
     {% if name %}
 
         You are logged in as {{ name }}.
+        <a href="/logout">Log out</a>.
 
     {% else %}
 
         You are not logged in.
+        <a href="/login">Log in</a>.
 
     {% endif %}
 
