--- a/flask/store/template/index.html
+++ b/flask/store/template/index.html
@@ -2,4 +2,17 @@
 
 {% block begin %}
 
+<h1>Books</h1>
+    <h2>BOOK NAME 1</h2>
+    <form action="/cart" method="post">
+        <input name="id" type="hidden" value="1">
+        <button type="submit">Add to cart</button>
+    </form>
+    <h2>BOOK NAME 2</h2>
+    <form action="/cart" method="post">
+        <input name="id" type="hidden" value="2">
+        <button type="submit">Add to cart</button>
+    </form>
+
+
 {% endblock %}
