Mon, Apr 15, 2024, 1:12 PM +08:00

--- a/flask/store/template/books.html
+++ b/flask/store/template/books.html
@@ -6,7 +6,7 @@
     {% for book in books %}
         <h2>{{ book["title"] }}</h2>
         <form action="/cart" method="post">
-            <input name="id" type="hidden" value="{{ book['id'] }}">
+            <input type="hidden" name="id" value="{{ book['id'] }}">
         </form>
 
 
