--- a/flask/store/template/books.html
+++ b/flask/store/template/books.html
@@ -7,7 +7,9 @@
         <h2>{{ book["title"] }}</h2>
         <form action="/cart" method="post">
             <input type="hidden" name="id" value="{{ book['id'] }}">
+            <button type="submit">Add to Cart</button>
         </form>
+    {% endfor %}
 
 
 {% endblock %}
