Mon, Apr 15, 2024, 2:23 PM +08:00

--- a/flask/store/template/cart.html
+++ b/flask/store/template/cart.html
@@ -5,8 +5,8 @@
     <h1>Cart</h1>
     <ol>
         {% for book in books %}
-
+            <li>{{ book["title"] }}</li>
+        {% endfor %}
     </ol>
-
 
 {% endblock%}
