--- a/flask/shows0/templates/search.html
+++ b/flask/shows0/templates/search.html
@@ -4,7 +4,7 @@
 
     <ul>
         {% for show in shows %}
-            <li>{{ show["title"] }}</li>
+            <li>{{ show["title"] }} - {{ show["year"] }}</li>
         {% endfor %}
     </ul>
 
