Mon, Apr 15, 2024, 3:30 PM +08:00

--- a/flask/shows2/templates/index.html
+++ b/flask/shows2/templates/index.html
@@ -2,9 +2,15 @@
 
 {% block body %}
 
-    <form action="/search" method="get">
-        <input autocomplete="off" autofocus name="q" placeholder="Query" type="search">
-        <button type="submit">Search</button>
-    </form>
+    <input autocomplete="off" autofocus placeholder="Query" type="search">
+
+    <ul></ul>
+
+    <script>
+
+        let input = document.querySelector('input');
+        input.addEventListener('input', async_function() {
+            
+        })
 
 {% endblock %}
