Mon, Apr 15, 2024, 3:31 PM +08:00

--- a/flask/shows2/templates/index.html
+++ b/flask/shows2/templates/index.html
@@ -10,7 +10,8 @@
 
         let input = document.querySelector('input');
         input.addEventListener('input', async_function() {
-            
+            let response = await
+
         })
 
 {% endblock %}
