--- a/flask/shows2/templates/index.html
+++ b/flask/shows2/templates/index.html
@@ -9,9 +9,10 @@
     <script>
 
         let input = document.querySelector('input');
-        input.addEventListener('input', async_function() {
-            let response = await
-
-        })
+        input.addEventListener('input', async function() { // adding listener event to input, the 'input' action
+            let response = await fetch('/search?q=' + input.value); // variable response, fetch route search?q= the input value
+            let shows = await response.text();
+            document.querySelector('ul').innerHTML = shows;
+        });
 
 {% endblock %}
