--- a/flask/shows2/templates/index.html
+++ b/flask/shows2/templates/index.html
@@ -11,7 +11,7 @@
         let input = document.querySelector('input');
         input.addEventListener('input', async function() { // adding listener event to input, the 'input' action
             let response = await fetch('/search?q=' + input.value); // variable response, fetch route search?q= the input value
-            let shows = await response.text();
+            let shows = await response.text(); // grabbing text from server
             document.querySelector('ul').innerHTML = shows;
         });
 
