Mon, Apr 15, 2024, 3:40 PM +08:00

--- a/flask/shows2/templates/index.html
+++ b/flask/shows2/templates/index.html
@@ -14,5 +14,6 @@
             let shows = await response.text(); // grabbing text from server
             document.querySelector('ul').innerHTML = shows;
         });
+    </script>
 
 {% endblock %}
