--- a/flask/shows3/templates/index.html
+++ b/flask/shows3/templates/index.html
@@ -12,7 +12,8 @@
         input.addEventListener('input', async function() { // adding listener event to input, the 'input' action
             let response = await fetch('/search?q=' + input.value); // variable response, fetch route search?q= the input value
             let shows = await response.text(); // grabbing text from server
-            document.querySelector('ul').innerHTML = shows;
+            for (show in shows)
+                document.querySelector('ul').innerHTML = shows ;
         });
     </script>
 
