--- a/flask/shows3/templates/index.html
+++ b/flask/shows3/templates/index.html
@@ -12,8 +12,9 @@
         input.addEventListener('input', async function() { // adding listener event to input, the 'input' action
             let response = await fetch('/search?q=' + input.value); // variable response, fetch route search?q= the input value
             let shows = await response.text(); // grabbing text from server
-            for (show in shows)
+            for (let show in shows){
                 document.querySelector('ul').innerHTML = shows ;
+            }
         });
     </script>
 
