Mon, Apr 15, 2024, 4:10 PM +08:00

--- a/flask/shows3/templates/index.html
+++ b/flask/shows3/templates/index.html
@@ -14,9 +14,9 @@
             let shows = await response.text(); // grabbing text from server
             showlist = []
             for (let show in shows){
-                showlist = show["title"]
-                document.querySelector('ul').innerHTML = shows ;
+                showlist.concat(show["title"]);
             }
+            document.querySelector('ul').innerHTML = showlist;
         });
     </script>
 
