--- a/flask/shows3/templates/index.html
+++ b/flask/shows3/templates/index.html
@@ -12,10 +12,10 @@
         input.addEventListener('input', async function() { // adding listener event to input, the 'input' action
             let response = await fetch('/search?q=' + input.value); // variable response, fetch route search?q= the input value
             let shows = await response.text(); // grabbing text from server
-            //showlist = []
-            for (let show in shows){
-                document.querySelector('ul').innerHTML = show["title"];
-            }
+            showObj = JSON.parse(shows);
+//            for (let show in shows){
+                document.querySelector('ul').innerHTML = showObj;
+  //          }
         });
     </script>
 
