--- a/flask/shows3/templates/index.html
+++ b/flask/shows3/templates/index.html
@@ -12,7 +12,7 @@
         input.addEventListener('input', async function() { // adding listener event to input, the 'input' action
             let response = await fetch('/search?q=' + input.value); // variable response, fetch route search?q= the input value
             let shows = await response.text(); // grabbing text from server
-            showObj = JSON.parse(shows);
+            let showObj = JSON.parse(shows);
             for (let show in showObj){
                 document.querySelector('ul').innerHTML = show.title;
             }
