--- a/flask/shows3/templates/index.html
+++ b/flask/shows3/templates/index.html
@@ -13,7 +13,7 @@
             let response = await fetch('/search?q=' + input.value); // variable response, fetch route search?q= the input value
             let shows = await response.text(); // grabbing text from server
             let showObj = JSON.parse(shows);
-
+            for (let i=0; i<showObj.len)
             document.querySelector('ul').innerHTML = showObj[0].title;
 
         });
