--- a/flask/shows3/templates/index.html
+++ b/flask/shows3/templates/index.html
@@ -13,9 +13,10 @@
             let response = await fetch('/search?q=' + input.value); // variable response, fetch route search?q= the input value
             let shows = await response.text(); // grabbing text from server
             let showObj = JSON.parse(shows);
+            let html = '';
             for (let i=0; i<showObj.length; i++)
-                
-            document.querySelector('ul').innerHTML = showObj[i].title;
+                html += `<li>${showObj[i].title}</li>`
+            document.querySelector('ul').innerHTML = html;
 
         });
     </script>
