Mon, Apr 15, 2024, 10:13 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -33,8 +33,8 @@
                         <ul></ul>
 
                         <script>
-                            let html = ''
-                            html += JSON.parse(birthdays);
+                            let html = 'HELLO WORLD'
+                            //html += JSON.parse(birthdays);
                             document.querySelector('ul').innerHTML = html;
 
 
