Mon, Apr 15, 2024, 10:19 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -34,7 +34,7 @@
 
                         <script>
                             let html = ''
-                            birthdayObj = JSON.parse(birthdays);
+                            let birthdayObj = JSON.parse(birthdays);
                             for (birthday of birthdayObj)
                             {
                                 html += '<li>${birthday.name}</li>'
