Mon, Apr 15, 2024, 10:20 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -37,7 +37,7 @@
                             let birthdayObj = JSON.parse(birthdays);
                             for (birthday of birthdayObj)
                             {
-                                html += '<li>${birthday.name}</li>'
+                                html += `<li>${birthday.name}</li>`
                             }
                             document.querySelector('ul').innerHTML = html;
 
