Mon, Apr 15, 2024, 10:21 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -33,7 +33,7 @@
                         <ul></ul>
 
                         <script>
-                            let html = ''
+                            let html = '';
                             let birthdayObj = JSON.parse(birthdays);
                             for (birthday of birthdayObj)
                             {
