Tue, Apr 16, 2024, 10:31 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -30,16 +30,17 @@
                     <tbody>
                         <!-- TODO: Loop through the database entries to display them in this table -->
 
-                        <ul>{{ birthdays }}</ul>
+                        <ul></ul>
 
                         <script>
-                //            let html = '';
-                //            let birthdayObj = JSON.parse(birthdays);
-                //            for (birthday of birthdayObj)
-                //            {
-                //                html += `<li>${birthday.name}</li>`
-                //            }
-                //            document.querySelector('ul').innerHTML = birthdays;
+                            let html = birthdays
+//                            let html = '';
+//                            let birthdayObj = JSON.parse(birthdays);
+//                            for (birthday of birthdayObj)
+//                            {
+ //                               html += `<li>${birthday.name}</li>`
+ //                           }
+                            document.querySelector('ul').innerHTML = birthdays;
 
 
                         </script>
