--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -33,13 +33,13 @@
                         <ul></ul>
 
                         <script>
-//                            let html = birthdays
-                            let html = '';
-                            let birthdayObj = JSON.parse('{{ birthdays }}');
-                            for (birthday of birthdayObj)
-                            {
-                               html += `<li>${birthday.name}</li>`
-                           }
+                            let html = "{{ birthdays }}"
+//                            let html = '';
+//                            let birthdayObj = JSON.parse('{{ birthdays }}');
+//                            for (birthday of birthdayObj)
+//                            {
+//                               html += `<li>${birthday.name}</li>`
+//                           }
                             document.querySelector('ul').innerHTML = birthdays;
 
 
