Tue, Apr 16, 2024, 10:43 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -33,15 +33,14 @@
                         <ul></ul>
 
                         <script>
-                            let html = '{{ birthdays }}'
-//                            let html = '';
-//                            let birthdayObj = JSON.parse('{{ birthdays }}');
-//                            for (birthday of birthdayObj)
-//                            {
-//                               html += `<li>${birthday.name}</li>`
-//                           }
+//                            let html = '{{ birthdays }}'
+                            let html = '';
+                            let birthdayObj = JSON.parse('{{ birthdays }}');
+                            for (birthday of birthdayObj)
+                            {
+                               html += `<li>${birthday.name}</li>`
+                            }
                             document.querySelector('ul').innerHTML = html;
-
 
                         </script>
 
