Tue, Apr 16, 2024, 10:46 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -36,10 +36,11 @@
 //                            let html = '{{ birthdays }}'
                             let html = '';
                             let birthdayObj = JSON.parse('{{ birthdays }}');
-                            for (birthday of birthdayObj)
-                            {
-                               html += `<li>${birthday.name}</li>`
-                            }
+//                            for (birthday of birthdayObj)
+//                            {
+//                               html += `<li>${birthday.name}</li>`
+//                            }
+html = birthdayObj;
                             document.querySelector('ul').innerHTML = html;
 
                         </script>
