Tue, Apr 16, 2024, 10:51 AM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -35,12 +35,12 @@
                         <script>
 //                            let html = '{{ birthdays }}'
                             let html = '';
-                            let birthdayObj = JSON.parse('{{ birthdays }}');
+//                            let birthdayObj = JSON.parse('{{ birthdays }}');
 //                            for (birthday of birthdayObj)
 //                            {
 //                               html += `<li>${birthday.name}</li>`
 //                            }
-html = birthdayObj;
+html = '{{ birthdays }}';
                             document.querySelector('ul').innerHTML = html;
 
                         </script>
