--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -35,12 +35,12 @@
                         <script>
 //                            let html = '{{ birthdays }}'
                             let html = '';
-//                            let birthdayObj = JSON.parse('{{ birthdays }}');
-//                            for (birthday of birthdayObj)
-//                            {
-//                               html += `<li>${birthday.name}</li>`
-//                            }
-html = '{{ birthdays }}';
+                            let birthdayObj = JSON.parse('{{ birthdays }}');
+                            for (birthday of birthdayObj)
+                            {
+                               html += `<li>${birthday.name}</li>`
+                            }
+// html = '{{ birthdays }}';
                             document.querySelector('ul').innerHTML = html;
 
                         </script>
