Tue, Apr 16, 2024, 12:21 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -34,7 +34,7 @@
 
                         <script>
                             let html = '';
-                            let birthdayObj = JSON.parse('{{ birthdays }}');
+                            let birthdayObj = '{{ birthdays }}';
                             for (birthday of birthdayObj)
                             {
                                html += `<li>${birthday.name}</li>`
