--- a/flask/shows3/templates/index.html
+++ b/flask/shows3/templates/index.html
@@ -12,11 +12,13 @@
         input.addEventListener('input', async function() { // adding listener event to input, the 'input' action
             let response = await fetch('/search?q=' + input.value); // variable response, fetch route search?q= the input value
             let shows = await response.text(); // grabbing text from server
-            let showObj = JSON.parse(shows);
-            let html = '';
-            for (show of showObj)
-                html += `<li>${show.title}</li>`
-            document.querySelector('ul').innerHTML = html;
+
+
+//            let showObj = JSON.parse(shows);
+//            let html = '';
+//            for (show of showObj)
+//                html += `<li>${show.title}</li>`
+            document.querySelector('ul').innerHTML = shows;
         });
     </script>
 
