Tue, Apr 16, 2024, 12:26 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -35,11 +35,11 @@
                         <script>
                             let html = '';
                             let birthdayObj = '{{ birthdays }}';
-                            for (birthday of birthdayObj)
-                            {
-                               html += `<li>${birthday.name}</li>`
-                            }
-                            document.querySelector('ul').innerHTML = html;
+//                            for (birthday of birthdayObj)
+//                            {
+//                               html += `<li>${birthday.name}</li>`
+//                            }
+                            document.querySelector('ul').innerHTML = birthdayObj;
 
                         </script>
 
