Tue, Apr 16, 2024, 12:30 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -34,7 +34,8 @@
 
                         <script>
                             let html = '';
-                            let birthdayObj = '{{ birthdays }}';
+                            let birthdayF = '{{ birthdays }}';
+                            let birthdayObj = JSON.parse(birthdayF);
 //                            for (birthday of birthdayObj)
 //                            {
 //                               html += `<li>${birthday.name}</li>`
