--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -40,11 +40,11 @@
 //                            {
 //                               html += `<li>${birthday.name}</li>`
 //                            }
-                            document.querySelector('ul').innerHTML = birthdayObj;
+//                            document.querySelector('ul').innerHTML = birthdayObj;
 
                         </script>
 
-
+                    {{ birthdayOBJ }}
                     </tbody>
                 </table>
             </div>
