Tue, Apr 16, 2024, 12:35 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -44,8 +44,12 @@
 
                         </script>
 
-                    {{ birthdayOBJ }}
+                        {{ birthdayObj }}
+                        {{ birthdayF }}
+
+
                     </tbody>
+
                 </table>
             </div>
         </div>
