Tue, Apr 16, 2024, 12:36 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -40,12 +40,11 @@
 //                            {
 //                               html += `<li>${birthday.name}</li>`
 //                            }
-//                            document.querySelector('ul').innerHTML = birthdayObj;
+                            document.querySelector('ul').innerHTML = birthdayF;
 
                         </script>
 
-                        {{ birthdayObj }}
-                        {{ birthdayF }}
+
 
 
                     </tbody>
