Tue, Apr 16, 2024, 12:39 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -40,7 +40,7 @@
 //                            {
 //                               html += `<li>${birthday.name}</li>`
 //                            }
-                            document.querySelector('ul').innerHTML = birthdayF;
+                            document.querySelector('ul').innerHTML = 'hello';
 
                         </script>
 
