Tue, Apr 16, 2024, 12:42 PM +08:00

--- a/flask/shows3/templates/index.html
+++ b/flask/shows3/templates/index.html
@@ -16,7 +16,7 @@
 //            let html = '';
 //            for (show of showObj)
 //                html += `<li>${show.title}</li>`
-            document.querySelector('ul').innerHTML = showObj;
+            document.querySelector('ul').innerHTML = 'hello';
         });
     </script>
 
