Tue, Apr 16, 2024, 12:46 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -30,7 +30,7 @@
                     <tbody>
                         <!-- TODO: Loop through the database entries to display them in this table -->
 
-                        <ul></ul>
+                        <ul id="text"></ul>
 
                         <script>
                             let html = '';
@@ -40,7 +40,7 @@
 //                            {
 //                               html += `<li>${birthday.name}</li>`
 //                            }
-                            document.querySelector('ul').innerHTML = 'hello';
+                            document.querySelector('#text').innerHTML = 'hello';
 
                         </script>
                     </tbody>
