--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -35,12 +35,12 @@
                         <script>
                             let html = '';
                             let birthdayF = '{{ birthdays }}';
-                            let birthdayObj = JSON.parse(birthdayF);
+//                            let birthdayO = JSON.parse(birthdayF);
 //                            for (birthday of birthdayObj)
 //                            {
 //                               html += `<li>${birthday.name}</li>`
 //                            }
-                            document.querySelector('#text').innerHTML = 'hello';
+                            document.querySelector('#text').innerHTML = birthdayF;
 
                         </script>
                     </tbody>
