Tue, Apr 16, 2024, 12:52 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -35,12 +35,12 @@
                         <script>
                             let html = '';
                             let birthdayF = '{{ birthdays }}';
-//                            let birthdayO = JSON.parse(birthdayF);
+//                            let birthdayObj = json.loads(birthdayF);
 //                            for (birthday of birthdayObj)
 //                            {
 //                               html += `<li>${birthday.name}</li>`
 //                            }
-                            document.querySelector('#text').innerHTML = birthdayF;
+                            document.querySelector('#text').innerHTML = 'hello';
 
                         </script>
                     </tbody>
