Tue, Apr 16, 2024, 12:56 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -34,7 +34,7 @@
 
                         <script>
                             let html = '';
-                            let birthdayF = '{{ birthdays }}';
+                            let birthdayF = '{"name":"John", "age":30, "city":"New York"}';  // '{{ birthdays }}';
                             const birthdayObj = JSON.parse(birthdayF);
 //                            for (birthday of birthdayObj)
 //                            {
