--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -34,13 +34,13 @@
 
                         <script>
                             let html = '';
-                            let birthdayF = '{"name":"John", "age":30, "city":"New York"}';  // '{{ birthdays }}';
+                            let birthdayF = '[{"name":"John", "age":30, "city":"New York"},{"name":"Kon", "age":32, "city":"Yoaa"}]';  // '{{ birthdays }}';
                             const birthdayObj = JSON.parse(birthdayF);
 //                            for (birthday of birthdayObj)
 //                            {
 //                               html += `<li>${birthday.name}</li>`
 //                            }
-                            document.querySelector('#text').innerHTML = 'hello';
+                            document.querySelector('#text').innerHTML = birthdayObj;
 
                         </script>
                     </tbody>
