Tue, Apr 16, 2024, 2:21 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -37,16 +37,16 @@
                         async function() { // adding listener event to input, the 'input' action
                             let response = await fetch('/return'); // variable response, fetch route search?q= the input value
                             let birthdays = await response.text(); // grabbing text from server
-                            let birthdayObj = JSON.parse(birthdays);
+//                            let birthdayObj = JSON.parse(birthdays);
 
-                            let html = '';
+//                            let html = '';
 //                            let birthdayF = '{{ birthdays }}'; //'[{"name":"John", "age":30, "city":"New York"},{"name":"Kon", "age":32, "city":"Yoaa"}]';  //
 //                            const birthdayObj = JSON.parse(birthdayF);
-                            for (birthday of birthdayObj)
-                            {
-                               html += `<li>${birthday.name}</li>`
-                            }
-                            document.querySelector('#text').innerHTML = html;
+//                            for (birthday of birthdayObj)
+//                            {
+//                               html += `<li>${birthday.name}</li>`
+//                            }
+                            document.querySelector('#text').innerHTML = response;
                         }
 
                         </script>
