Tue, Apr 16, 2024, 2:22 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -34,9 +34,9 @@
 
                         <script>
 
-                        async function() { // adding listener event to input, the 'input' action
-                            let response = await fetch('/return'); // variable response, fetch route search?q= the input value
-                            let birthdays = await response.text(); // grabbing text from server
+//                        async function() { // adding listener event to input, the 'input' action
+//                            let response = await fetch('/return'); // variable response, fetch route search?q= the input value
+//                            let birthdays = await response.text(); // grabbing text from server
 //                            let birthdayObj = JSON.parse(birthdays);
 
 //                            let html = '';
@@ -46,8 +46,8 @@
 //                            {
 //                               html += `<li>${birthday.name}</li>`
 //                            }
-                            document.querySelector('#text').innerHTML = response;
-                        }
+                            document.querySelector('#text').innerHTML = 'hi';
+//                        }
 
                         </script>
                     </tbody>
