--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -41,19 +41,19 @@
                                 return birthdayObjf;
                             }
 
-                            fetchlist().then(birthdayObject => {birthdayObjf;});
+                            fetchlist().then(birthdayObj => {birthdayObjf;});
 
 //                            let response = await fetch('/return'); // variable response, fetch route search?q= the input value
 //                            let birthdays = await response.text(); // grabbing text from server
 //                            let birthdayObj = JSON.parse(birthdays);
 
-//                            let html = '';
+                            let html = '';
 //                            let birthdayF = '{{ birthdays }}'; //'[{"name":"John", "age":30, "city":"New York"},{"name":"Kon", "age":32, "city":"Yoaa"}]';  //
 //                            const birthdayObj = JSON.parse(birthdayF);
-//                            for (birthday of birthdayObj)
-//                            {
-//                               html += `<li>${birthday.name}</li>`
-//                            }
+                            for (birthday of birthdayObj)
+                            {
+                               html += `<li>${birthday.name}</li>`
+                            }
                             document.querySelector('#text').innerHTML = 'hi';
 //                        }
 
