Tue, Apr 16, 2024, 2:50 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -37,31 +37,17 @@
                                 let response = await fetch('/return'); // variable response, fetch route search?q= the input value
                                 let birthdays = await response.text(); // grabbing text from server
                                 let birthdayObj = JSON.parse(birthdays);
+                                let months = ["JAN","FEB","MAR","APRIL","MAY","JUNE","JULY","AUG","SEP","OCT","NOV","DEC"];
 
                                 let html = '';
                                 for (birthday of birthdayObj)
                                 {
-                                   html += `<li>${birthday.name}</li>`
+                                   html += `<li>${birthday.name}-${birthday.day} ${months[birthday.month - 1]}</li>`
                                 }
                                 document.querySelector('#text').innerHTML = html;
-
                             }
 
                             fetchlist();
-
-
-//                            let response = await fetch('/return'); // variable response, fetch route search?q= the input value
-//                            let birthdays = await response.text(); // grabbing text from server
-//                            let birthdayObj = JSON.parse(birthdays);
-
-//                            let birthdayF = '{{ birthdays }}'; //'[{"name":"John", "age":30, "city":"New York"},{"name":"Kon", "age":32, "city":"Yoaa"}]';  //
-//                            const birthdayObj = JSON.parse(birthdayF);
-                            for (birthday of birthdayObj)
-                            {
-                               html += `<li>${birthday.name}</li>`
-                            }
-//                            document.querySelector('#text').innerHTML = birthdayObj;
-//                        }
 
                         </script>
                     </tbody>
