--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -14,7 +14,17 @@
             <div class="section">
 
                 <h2>Add a Birthday</h2>
-                <!-- TODO: Create a form for users to submit a name, a month, and a day -->
+
+                <form>
+                    <input type="text" autofocus placeholder="Name" id="name" action="post">
+                    <
+
+
+
+                    <button>Submit</button>
+                </form>
+
+
             </div>
 
             <div class="section">
