Tue, Apr 16, 2024, 3:03 PM +08:00

--- a/birthdays/templates/index.html
+++ b/birthdays/templates/index.html
@@ -15,7 +15,7 @@
 
                 <h2>Add a Birthday</h2>
 
-                <form>
+                <form action="/">
                     <input type="text" autofocus placeholder="Name" id="name" action="post">
                     <
 
